--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 micronaut:
   application:
     name: keymanagerRest
+
+grpc:
+  client:
+    plaintext: true
+    max-retry-attempts: 10
+  channels:
+    keyManager:
+      address: 'localhost:50051'
+      plaintext: true
+      max-retry-attempts: 5
